# msrs

./: .gitignore  Cargo.toml  HANDOFF.md  README.md
.github/workflows/: ci.yml
crates/msrs-core/: Cargo.toml
crates/msrs-core/src/: effects.rs  fsm_task.rs  lib.rs  rt.rs  store.rs  trigger.rs
crates/msrs-transport/: Cargo.toml
crates/msrs-transport/src/: driver.rs  lib.rs  tasks.rs  transport.rs
docs/superpowers/notes/: copper-statig-signatures.md
docs/superpowers/plans/: 2026-06-29-msrs-implementation.md  2026-06-29-msrs-implementation.md.tasks.json
examples/echo/: Cargo.toml  copperconfig.ron
examples/echo/src/: echo.rs  main.rs
spike/: Cargo.toml  build.rs  copperconfig.ron
spike/src/: main.rs
