[package]
name = "echo"
version = "0.0.0"
edition.workspace = true
license.workspace = true

[dependencies]
cu29.workspace = true
statig.workspace = true
crossbeam-channel.workspace = true
msrs-core = { path = "../../crates/msrs-core" }
msrs-transport = { path = "../../crates/msrs-transport" }
# Payload derives. `bincode` is the cu-bincode fork cu29 uses, so the derived
# `Encode`/`Decode` impls target the same traits the runtime expects.
bincode = { package = "cu-bincode", version = "2.0.2", features = ["derive", "alloc"], default-features = false }
serde = { version = "1", features = ["derive"] }
